добавил оптимизацию под телефоны на домашнюю страницу

--- a/front/constract-calc-front/src/pages/Home.css
+++ b/front/constract-calc-front/src/pages/Home.css
@@ -62,4 +62,19 @@ body{
     margin-left: 20px;
   }
 
+
+  @media only screen and (max-width: 600px) {
+    .home-container {
+        height: auto; 
+    }
+
+    .client-card {
+        width: 100%; 
+    }
+
+    .create-button {
+        margin-left: 5px; 
+    }
+}
+
   
